--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ analytics:
 author:
   name             : "NerdNextDoor"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
+  bio              : "Jack of all trades, master of none."
   location         : "Somewhere in Scotland, United Kingdom"
   email            : 
   links:
