--- a/_config.yml
+++ b/_config.yml
@@ -176,6 +176,8 @@ exclude:
 keep_files:
   - .git
   - .svn
+  - .well-known/discord
+  - discord
 encoding: "utf-8"
 markdown_ext: "markdown,mkdown,mkdn,mkd,md"
 
