--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ comments:
     category_name        : "Posts" # Full text name of the category
     category_id          : "DIC_kwDONktH8c4ClqIe" # Shown during giscus setup at https://giscus.app
     discussion_term      : "pathname" # "pathname" (default), "url", "title", "og:title"
-    reactions_enabled    : # '1' for enabled (default), '0' for disabled
+    reactions_enabled    : "1" # '1' for enabled (default), '0' for disabled
     theme                : "noborder_dark" # "light" (default), "dark", "dark_dimmed", "transparent_dark", "preferred_color_scheme"
     strict               : "1" # 1 for enabled, 0 for disabled (default)
     input_position       : "top" # "top", "bottom" # The comment input box will be placed above or below the comments
