--- a/_config.yml
+++ b/_config.yml
@@ -125,9 +125,9 @@ author:
     - label: "Mastodon"
       icon: "fas fa-fw fa-link"
       url: "https://mastodon.social/@MrMasterKeyboard"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/IAmTheNerdNextDoor"
+    - label: "Codeberg"
+      icon: "fab fa-fw fa-link"
+      url: "https://codeberg.org/NerdNextDoor"
 
 # Site Footer
 footer:
@@ -138,9 +138,9 @@ footer:
     - label: "Mastodon"
       icon: "fas fa-fw fa-link"
       url: "https://mastodon.social/@MrMasterKeyboard"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/IAmTheNerdNextDoor"
+    - label: "Codeberg"
+      icon: "fab fa-fw fa-link"
+      url: "https://codeberg.org/NerdNextDoor"
 
 # Reading Files
 include:
