--- a/_config.yml
+++ b/_config.yml
@@ -128,6 +128,13 @@ author:
     - label: "Codeberg"
       icon: "fas fa-fw fa-link"
       url: "https://codeberg.org/NerdNextDoor"
+    - label: "Arikoto"
+      icon: "fas fa-fw fa-link"
+      url: "https://arikoto.nerdnextdoor.net"
+    - label: "The Kernel Development Wiki"
+      icon: "fas fa-fw fa-link"
+      url: "https://krnldev.nerdnextdoor.net"
+
 
 # Site Footer
 footer:
